Fix Helm installation tests