@@ -133,7 +133,6 @@
                                 <include>**/*IT.java</include>
                                 <include>**/*AT.java</include>
                             </includes>
-                            <argLine>@{argLine} --add-opens java.base/java.time=ALL-UNNAMED</argLine>
                         </configuration>
                         <executions>
                             <execution>
